# register_simulation

./: .gitignore  CMakeLists.txt  README.md  device_register.hpp  gpio.cpp  gpio.hpp  main.cpp  push_binary_openocd.sh  rp2040_gpio.cpp  rp2040_gpio.hpp  simulated_device_register.cpp  simulated_device_register.hpp  simulated_peripheral.hpp  start_gdb_openocd.sh  types.hpp
.github/workflows/: build_and_run_tests.yml  cmake.yml
lib/: CMakeLists.txt  rp2040_defs.hpp  rp2040_gpio.cpp  rp2040_gpio.hpp  simulated_device_register.cpp  simulated_peripheral.hpp
lib/HAL/: CMakeLists.txt
lib/HAL/inc/HAL/: GPIO.hpp  SPI.hpp  UART.hpp  bitfield.hpp  clock_control.hpp  device_register.hpp  gpio.hpp  simulatable_peripheral.hpp  simulated_device_register.hpp  simulated_peripheral.hpp
lib/HAL/inc/system/: architecture.hpp  error_category.hpp  error_code.hpp  error_values.hpp  fixed_capacity_queue.hpp  standard_category.hpp  syscalls.hpp
lib/HAL/src/: UART.cpp  clock_control.cpp  simulated_device_register.cpp  syscalls.cpp
lib/interface/: device_register.hpp  simulated_device_register.hpp
lib/rp2040/: CMakeLists.txt
lib/rp2040/GPIO/: GPIO.cpp  GPIO.hpp  effect_handler_initialization.cpp  pad_control.cpp  pad_control.hpp  registers.hpp  types.hpp  user_IO.cpp  user_IO.hpp  user_IO_registers.hpp
lib/rp2040/GPIO/registers/: GPIO_control.hpp  dormant_wake_interrupts.hpp  interrupt_control.hpp  pad_GPIO.hpp  proc0_interrupts.hpp  proc1_interrupts.hpp
lib/rp2040/gpio/: IO.cpp  IO.hpp  gpio.cpp  pad_control.hpp  register_handle.hpp
lib/rp2040/inc/rp2040/: shared_types.hpp
lib/rp2040/inc/rp2040/GPIO/: GPIO.hpp  GPIO_handle.hpp  SIO.hpp  pad_control.hpp  user_IO.hpp
lib/rp2040/inc/rp2040/GPIO/registers/: GPIO_control.hpp  SIO.hpp  dormant_wake_interrupts.hpp  interrupt_control.hpp  pad_GPIO.hpp  proc0_interrupts.hpp  proc1_interrupts.hpp  shared_types.hpp
lib/rp2040/inc/rp2040/SPI/: SPI_handle.hpp  SPI_peripheral.hpp
lib/rp2040/inc/rp2040/SPI/registers/: SPI.hpp
lib/rp2040/inc/rp2040/UART/: UART.hpp
lib/rp2040/inc/rp2040/UART/registers/: UART.hpp
lib/rp2040/inc/rp2040/subsystem_resets/: resets.hpp
lib/rp2040/inc/rp2040/subsystem_resets/registers/: resets.hpp
lib/rp2040/inc/rp2040/time/: ROSC.hpp  clocks.hpp
lib/rp2040/inc/rp2040/time/registers/: GP_clocks.hpp  ROSC.hpp
lib/rp2040/ld/: script.ld
lib/rp2040/src/: rp2040_gpio.cpp  rp2040_gpio.hpp  rp2040_pad_control.hpp
lib/rp2040/src/GPIO/: GPIO.cpp  GPIO_handle.cpp  SIO.cpp  effect_handler_initialization.cpp  pad_control.cpp  user_IO.cpp
lib/rp2040/src/UART/: UART.cpp  UART_peripheral.cpp
lib/rp2040/src/subsystem_resets/: resets.cpp
lib/rp2040/src/time/: ROSC.cpp  clock_control.cpp  clocks.cpp
src/: CMakeLists.txt  SPI_snippet.cpp  UART_snippet.cpp  application.cpp  application.hpp  main.cpp
test/: CMakeLists.txt  ROSC_tests.cpp  UART_tests.cpp  clock_control_tests.cpp  gpio_tests.cpp  tests.cpp
tests/: CMakeLists.txt  GPIO_tests.cpp  ROSC_tests.cpp  SPI_tests.cpp  UART_tests.cpp  clock_control_tests.cpp  fixed_capacity_queue_tests.cpp  misc_tests.cpp
